--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
         "sass-loader": "^7.3.1",
         "webpack": "^4.40.2",
         "webpack-cli": "^3.3.9"
+    },
+    "dependencies": {
+        "bootstrap": "^4.3.1",
+        "jquery": "^3.4.1",
+        "popper.js": "^1.15.0"
     }
 }
